--- a/frontend/frontend/src/app/view/clientes-crud/clientes-crud.component.css
+++ b/frontend/frontend/src/app/view/clientes-crud/clientes-crud.component.css
@@ -1,5 +1,5 @@
 button {
-    margin-bottom: 30px;
+    margin: 0 0 30px 30px;
     background-color:#1A374D;
     color:#fff;
     border-radius: 3px;
