post e get para vendedor e produto se comunicando

--- a/frontend/frontend/src/app/components/cliente/cliente-create/cliente-create.component.html
+++ b/frontend/frontend/src/app/components/cliente/cliente-create/cliente-create.component.html
@@ -12,7 +12,7 @@
             <input matInput placeholder="Nome"[(ngModel)]="cliente.nome" name = "nome">
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Escreva o nome do cliente </mat-label>
+            <mat-label>Escreva o codigo do cliente </mat-label>
             <input matInput placeholder="Codigo"[(ngModel)]="cliente.codigo" name = "codigo">
         </mat-form-field>
        
