--- a/frontend/frontend/src/app/components/vendedor/vendedor-create/vendedor-create.component.html
+++ b/frontend/frontend/src/app/components/vendedor/vendedor-create/vendedor-create.component.html
@@ -3,7 +3,7 @@
         <i class="material-icons">
             person
         </i>
-        Novo verdedor Mazzaropi
+        Novo verdedor 
     </mat-card-title>
     <form>
         <mat-form-field appearance="outline">
