todas as funcionalidades rest funcionando

--- a/frontend/frontend/src/app/components/cliente/cliente-read/cliente-read.component.css
+++ b/frontend/frontend/src/app/components/cliente/cliente-read/cliente-read.component.css
@@ -5,9 +5,9 @@ table{
     margin-right: 10px;
 }
 .edit > i {
-    color: #d9cd26
+    color: #B1D0E0
 }
 
 .delete > i{
-    color: #e35e6b
+    color: #6998AB
 }
