--- a/frontend/frontend/src/app/components/produto/produto-update/produto-update.component.html
+++ b/frontend/frontend/src/app/components/produto/produto-update/produto-update.component.html
@@ -9,11 +9,11 @@
     <form>
         <mat-form-field appearance="outline">
             <mat-label>Escreva o nome do Produto </mat-label>
-            <input matInput placeholder="Nome"[value]="produto.nome" name = "nome" disabled>
+            <input matInput placeholder="Nome"[value]="produto.nome" name = "nome" >
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Escreva a Escreva codigo do Produto</mat-label>
-            <input matInput placeholder="Codigo" [value]="produto.codigo" name="codigo" disabled>
+            <input matInput placeholder="Codigo" [value]="produto.codigo" name="codigo" >
         </mat-form-field>
         
         
