--- a/frontend/frontend/src/app/components/vendedor/vendedor-update/vendedor-update.component.html
+++ b/frontend/frontend/src/app/components/vendedor/vendedor-update/vendedor-update.component.html
@@ -9,11 +9,11 @@
     <form>
         <mat-form-field appearance="outline">
             <mat-label>Escreva o nome do vendedor </mat-label>
-            <input matInput placeholder="Nome"[value]="vendedor.nome" name = "nome" disabled>
+            <input matInput placeholder="Nome"[value]="vendedor.nome" name = "nome" >
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Escreva a Escreva codigo do vendedor</mat-label>
-            <input matInput placeholder="Codigo" [value]="vendedor.codigo" name="codigo" disabled>
+            <input matInput placeholder="Codigo" [value]="vendedor.codigo" name="codigo" >
         </mat-form-field>
         
         
