--- a/frontend/frontend/src/app/components/cliente/cliente-update/cliente-update.component.html
+++ b/frontend/frontend/src/app/components/cliente/cliente-update/cliente-update.component.html
@@ -9,11 +9,11 @@
     <form>
         <mat-form-field appearance="outline">
             <mat-label>Escreva o nome do cliente </mat-label>
-            <input matInput placeholder="Nome"[value]="cliente.nome" name = "nome" disabled>
+            <input matInput placeholder="Nome"[value]="cliente.nome" name = "nome" >
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Escreva a Escreva codigo do cliente</mat-label>
-            <input matInput placeholder="Codigo" [value]="cliente.codigo" name="codigo" disabled>
+            <input matInput placeholder="Codigo" [value]="cliente.codigo" name="codigo" >
         </mat-form-field>
         
         
