--- a/frontend/frontend/src/app/components/cliente/cliente-create/cliente-create.component.html
+++ b/frontend/frontend/src/app/components/cliente/cliente-create/cliente-create.component.html
@@ -15,6 +15,10 @@
             <mat-label>Escreva o codigo do cliente </mat-label>
             <input matInput placeholder="Codigo"[(ngModel)]="cliente.codigo" name = "codigo">
         </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Escreva o nome do Vendedor </mat-label>
+            <input matInput placeholder="NomeVendedor"[(ngModel)]="cliente.nomeVendedor" name = "nomeVendedor">
+        </mat-form-field>
        
 
         
