--- a/frontend/frontend/src/app/components/cliente/cliente-read/cliente-read.component.html
+++ b/frontend/frontend/src/app/components/cliente/cliente-read/cliente-read.component.html
@@ -1,44 +1,59 @@
-<div class = "mat-elevation-z4">
+<div class="mat-elevation-z4"
+type="search"
+placeholder="busca..."
+>
+  
   <table mat-table [dataSource]="clientes">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
-  
-      <!-- Nome Column -->
-      <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let row">{{row.nome}}</td>
-      </ng-container>
-  
-      <!-- codigo Column -->
-      <ng-container matColumnDef="codigo">
-        <th mat-header-cell *matHeaderCellDef >Codigo</th>
-        <td mat-cell *matCellDef="let row">{{row.codigo}}</td>
-      </ng-container>
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+    </ng-container>
 
-       <!-- action Column -->
-       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef >Ações</th>
-        <td mat-cell *matCellDef="let row">
-          <a routerLink= "/cliente/update/{{ row.id }}" class="edit">
-            <i class="material-icons ">
-              edit
-            </i>
-          </a>
-          <a routerLink= "/cliente/delete/{{ row.id }}" class="delete">
-            <i class="material-icons ">
-              delete
-            </i>
-          </a>
-        </td>
-      </ng-container>
-      
+    <!-- Nome Column -->
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+    </ng-container>
+
+    <!-- codigo Column -->
+    <ng-container matColumnDef="codigo">
+      <th mat-header-cell *matHeaderCellDef>Codigo</th>
+      <td mat-cell *matCellDef="let row">{{row.codigo}}</td>
+    </ng-container>
+
+    <!-- codigo Column -->
+    <ng-container matColumnDef="nomeVendedor">
+      <th mat-header-cell *matHeaderCellDef>Nome Vendedor</th>
+      <td mat-cell *matCellDef="let row">{{row.nomeVendedor}}</td>
+    </ng-container>
+
+
+    <!-- action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <a routerLink="/cliente/update/{{ row.id }}" class="edit">
+          <i class="material-icons">
+            edit
+          </i>
+        </a>
+        <a routerLink="/cliente/delete/{{ row.id }}" class="delete">
+          <i class="material-icons">
+            delete
+          </i>
+        </a>
+      </td>
+    </ng-container>
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+
+ 
   
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
 
 </div>
